# tak.garden

tak_garden_client/: .gitignore  Cargo.toml  notes.txt  package-lock.json  package.json  webpack.config.js
tak_garden_client/js/: bootstrap.js  connection.js  display.js  index.js
tak_garden_client/src/: connection.rs  late_init.rs  lib.rs
tak_garden_client/static/: index.html  style.css
tak_garden_common/: Cargo.toml
tak_garden_common/src/: lib.rs
tak_garden_server/: Cargo.toml  notes.txt
tak_garden_server/src/: main.rs
