[package]
name = "tak_garden_common"
version = "0.1.0"
authors = ["Tilman Schmidt <AccessKeymaster@gmx.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustak = { path = "../../rustak", features = ["serde_support"] }
serde = { version = "1.0", features = ["derive"] }